# native-test-repro

./: .bazelrc  BUILD.bazel  WORKSPACE.bazel  run.sh
